ConnectionTest added